# Quadruped_511

./: CMakeLists.txt  README.md  update_log.txt  update_log_si.txt
robot/: CMakeLists.txt
robot/include/: bezier_interpolation.h  body_state_estimator.h  contact_detection.h  fb_dynamic.h  joint_driver.h  leg_driver.h  robot.h  robot_console.h  robot_controller.h  robot_model.h  up_at9s.h  up_serial.h  up_spi.h  up_usbDevice.h  vector_tools.h
robot/source/: bezier_interpolation.cpp  body_state_estimator.cpp  contact_detection.cpp  fb_dynamic.cpp  joint_driver.cpp  leg_driver.cpp  robot.cpp  robot_console.cpp  robot_model.cpp  up_at9s.cpp  up_serial.cpp  up_spi.cpp  up_usbDevice.cpp  vector_tools.cpp
robot_running_data/: robot_data.txt
scripts/: download_data_1.sh  download_data_2.sh  loading_1.sh  loading_2.sh  run_robot.sh
user/: CMakeLists.txt
user/leg_controller/: CMakeLists.txt  leg_controller.cpp  leg_controller.h  main.cpp
user/leg_controller/WBC_Ctrl/: ContactSpec.h  KinWBC.h  LocomotionCtrl.cpp  LocomotionCtrl.h  Task.h  WBC_Ctrl.cpp  WBC_Ctrl.h  WBIC.h
user/leg_controller/WBC_Ctrl/ContactSet/: SingleContact.cpp  SingleContact.h
user/leg_controller/WBC_Ctrl/TaskSet/: BodyOriTask.cpp  BodyOriTask.h  BodyPosTask.cpp  BodyPosTask.h  LinkPosTask.cpp  LinkPosTask.h
user/leg_controller/convexMPC/: RobotState.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  common_types.h  convexMPC_interface.cpp  convexMPC_interface.h
user/leg_controller/include/: balance_stand_controller.h  gait_plan.h  locomotion_controller.h  mode_controller.h  safety_check.h  trajectory_plan.h
user/leg_controller/source/: balance_stand_controller.cpp  gait_plan.cpp  locomotion_controller.cpp  mode_controller.cpp  safety_check.cpp  trajectory_plan.cpp
user/test/: CMakeLists.txt
user/test/at9s_test/: CMakeLists.txt  at9s_test.cpp
user/test/dynamic_test/: CMakeLists.txt  dynamic_test.cpp
user/test/file_test/: CMakeLists.txt  file_test.cpp
user/test/gait_plan_test/: CMakeLists.txt  gait_test.cpp
user/test/imu_test/: CMakeLists.txt  imu_test.cpp
user/test/lcm_test/: CMakeLists.txt  lcm_test.cpp  lcm_type.lcm
user/test/lcm_test/exlcm/: lcm_type.hpp
user/test/mutex_test/: CMakeLists.txt  mutex_test.cpp
user/test/task_test/: CMakeLists.txt  task_test.cpp
user/test/usb_plot_test/: CMakeLists.txt  plotwidget.cpp  plotwidget.h  qcustomplot.cpp  usb_plot_test.cpp
user/test/usb_test/: CMakeLists.txt  usb_test.cpp
